# fabrial

./: .gitignore  .gitmodules  Adding New Sequence Items.md  Developer README.md  Open Air Test (Drew Software).DTA  README.md  TODO.md  TODO.txt  defaults.py  developer.py  example.json  example.toml  main.py  oven_settings.json  packaged_main.py  pyproject.toml  pyqtgraph_test.py  pyvenv.cfg  requirements.txt  run.py  test.json  test.py  test.toml  test2.py  thing_from_yesterday.md
.github/workflows/: publish-to-pypi.yml
QuincE/: __init__.py  instruments.py  main.py  main_window.py
QuincE/classes/: new_process.py  plotting.py  runners.py
QuincE/constants/: __init__.py  entry_points.py
QuincE/custom_widgets/: __init__.py
QuincE/enums/: status.py
QuincE/gamry_integration/: gamry.py
QuincE/menu/: file.py
QuincE/sequence_builder/: data_item.py
QuincE/setpoint/: __init__.py
QuincE/tabs/: __init__.py  oven_control.py  sequence_builder.py
QuincE/utility/: descriptions.py  errors.py  jinja.py  plugins.py
application_settings/gamry/: gamry_settings.json
application_settings/oven/: oven_settings.json
builtin_plugins/: README.md  pyproject.toml
builtin_plugins/builtin_plugins/: __init__.py
builtin_plugins/builtin_plugins/flow_control/: __init__.py
builtin_plugins/builtin_plugins/flow_control/items/: __init__.py
builtin_plugins/builtin_plugins/flow_control/items/hold/: __init__.py  hold_item.py  hold_widget.py
default_settings/gamry/: description.md  gamry_settings.json
doc/: plugin_guide.md
doc/example_descriptions/: visuals.md
doc/plugin_guide/: plugin_guide.md
docs/: Adding New Sequence Items.md
fabrial/: __init__.py  __main__.py  main.py  main_window.py
fabrial/classes/: __init__.py  exceptions.py  sequence_runner.py  sequence_step.py  step_runner.py
fabrial/constants/: __init__.py
fabrial/custom_widgets/: __init__.py  parameter_description.py
fabrial/sequence_builder/: item_widget.py
fabrial/tabs/: sequence_builder.py  sequence_display.py
fabrial/utility/: application_shortcut.py  descriptions.py  errors.py  plugins.py  sequence_builder.py  settings.py
gamry_testing/: Potentiostatic EIS.exp  comtypes_ramp_example.py  impedance_reader.py  pywin32_enumeration_example.py  test.py
initialization/: category.json  options.json
initialization/EIS/: EIS.json  category.json
initialization/flow_control/: loop.json
initialization/oven_control/: category.json  increment_temperature.json  set_temperature.json
item_descriptions/: template.md
item_descriptions/oven_control/: increment_temperature.md  set_temperature.md
item_descriptions/temperature/: set_temperature.md
item_initialization/: test.json
item_initialization/electrochemistry/: EIS.json  category.json
item_initialization/temperature/: background_temperature.json  increment_temperature.json
legacy/: developer.py
packaging/: InstallerBuilder.ifp  Quincy.spec
quincE/: __init__.py  instruments.py  main.py  main_window.py  secondary_window.py
quincE/classes/: __init__.py  actions.py  exceptions.py  lock.py  new_process.py  plotting.py  process.py  runners.py  sequence_step.py  sequence_thread.py  signals.py  timer.py
quincE/constants/: __init__.py  entry_points.py  name.py  tree_item.py
quincE/custom_widgets/: __init__.py  container.py  parameter_description.py  plot.py
quincE/enums/: __init__.py  sequence.py  status.py
quincE/instrument_connection/: widgets.py
quincE/menu/: file.py  menu_bar.py  sequence.py  view.py
quincE/sequence_builder/: __init__.py  data_item.py  item_widget.py
quincE/tabs/: __init__.py  sequence_builder.py  sequence_display.py
quincE/utility/: descriptions.py  errors.py  events.py  jinja.py  plugins.py  sequence_builder.py  timers.py
quincy/: __main__.py  instruments.py  main_window.py  secondary_window.py
quincy/classes/: __init__.py  actions.py  clipboard.py  descriptions.py  lock.py  metaclasses.py  process.py  signals.py  timer.py
quincy/constants/: __init__.py  tree_item.py
quincy/custom_widgets/: container.py  markdown_view.py  parameter_description.py  plot.py
quincy/instrument_connection/: ports.py  widgets.py
quincy/menu/: __init__.py  menu_bar.py  sequence.py  view.py
quincy/sequence_builder/: __init__.py  data_item.py  item.py  item_widget.py  tree_item.py  tree_model.py
quincy/stability_check/: widgets.py
quincy/tabs/: oven_control.py  sequence_builder.py  tab_widget.py
quincy/utility/: descriptions.py  images.py  jinja.py  layout.py  plugins.py  sequence_builder.py  serde.py  temperature.py  timers.py
saved_settings/: sequence_settings.csv
src/: .pytest.ini  Files.py  actions.py  developer.py  file_locations.py  gamry_main.py  instruments.py  main.py  main_window.py  menu.py  mutex.py  secondary_window.py  temperature_sensor.py  tree_main.py
src/Files/: Datetime.py  Icons.py  Names.py  README.md  TreeView.py  __init__.py  folders.py
src/backend/: main_window.py  temperature_sensor.py
src/change_setpoint/: __init__.py  tests.py  widgets.py
src/classes/: actions.py  datamutex.py  descriptions.py  lock.py  metaclasses.py  mutex.py  null.py  plotting.py  points.py  process.py  process_runner.py  runners.py  (+1 more)
test_plugin/: pyproject.toml
(+527 files in other folders)
