[project]
name = "quincy"
version = "0.0.1"
authors = [{ name = "Drew Whitney", email = "drewlwhitney@gmail.com" }]
maintainers = [{ name = "Drew Whitney", email = "drewlwhitney@gmail.com" }]
description = "Quincy lets you create sequences to automate lab experiments."
readme = "README.md"
license = { file = "LICENSE" }

requires-python = ">=3.13"
dependencies = [
    "comtypes==1.4.11",
    "jinja2==3.1.6",
    "minimalmodbus==2.1.1",
    "polars==1.31.0",
    "pyqt6==6.9.1",
    "pyqtgraph==0.13.7",
    "pyserial==3.5",
    "tendo==0.3.0",
]

[project.optional-dependencies]
testing = ["pytest==8.4.1", "pytest-qt==4.5.0"]

[project.urls]
Repository = "https://github.com/Maughan-Lab/Quincy-New"

[project.scripts]
quincy = "quincy.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


# mypy config
[tool.mypy]
explicit_package_bases = true
check_untyped_defs = true
follow_untyped_imports = true
enable_error_code = ["possibly-undefined"]
strict = true
disallow_incomplete_defs = false
disallow_untyped_defs = false
disallow_untyped_calls = false
no_implicit_reexport = false
extra_checks = false

# pytest config
[tool.pytest.ini_options]
addopts = "-q -s"
testpaths = ["tests"]
python_files = ["*.py"]
python_functions = ["test_*"]
