[project]
name = "Quinc-E"
dynamic = ["version"]
authors = [{ name = "Drew Whitney", email = "drewlwhitney@gmail.com" }]
maintainers = [{ name = "Drew Whitney", email = "drewlwhitney@gmail.com" }]
description = "Quincy lets you create sequences to automate lab experiments."
readme = "README.md"
# dependencies
requires-python = ">=3.13"
dependencies = [
    "comtypes>=1.4.11",
    "jinja2>=3.1.6",
    "minimalmodbus>=2.1.1",
    "polars>=1.31.0",
    "pyqt6>=6.9.1",
    "pyqtgraph>=0.13.7",
    "pyserial>=3.5",
    "tendo>=0.3.0",
    "quinc-E-core-plugins",
]
[dependency-groups]
test = ["pytest", "pytest-qt"]

[project.urls]
Repository = "https://github.com/Maughan-Lab/Quincy-New"

# makes a `quincE`/`quincE.exe` script when installing
[project.scripts]
quincE = "quincE.main:main"


# hatch config
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["./quincE"]

[tool.hatch.version]
source = "vcs"

# uv config
[tool.uv]
default-groups = ["test"]

[tool.uv.workspace]
members = ["core_plugins"]

[tool.uv.sources]
Quinc-E-core-plugins = { workspace = true }


# mypy config
[tool.mypy]
explicit_package_bases = true
check_untyped_defs = true
follow_untyped_imports = true
enable_error_code = ["possibly-undefined"]
strict = true
disallow_incomplete_defs = false
disallow_untyped_defs = false
disallow_untyped_calls = false
no_implicit_reexport = false
extra_checks = false


# pytest config
[tool.pytest.ini_options]
addopts = "-q -s --show-capture=no"
testpaths = ["tests"]
# search in all python files except `__init__.py`
python_files = ["[!__init__]*.py"]
python_functions = ["test_*"]
