[project]
name = "Quinc-E-builtin-plugins"
version = "0.1.0"
description = "Built-in plugins for Quinc-E."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.entry-points."QuincE.plugins"]
builtin = "builtin_plugins"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["./builtin_plugins"]
